<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Update">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/updateHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updateHeadline"
                android:textSize="25sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputGetWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/searchWord" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/getWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="actionButtonGetWord"
                android:text="@string/getWord" />

            <TextView
                android:id="@+id/getWordDef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getWordDef"
                android:textStyle="normal|bold"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewDef"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/updateWordHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/updateWordHeadline"
                android:textStyle="normal|bold"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputUpdateDef"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/updateDef" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/updateWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="actionButtonUpdateWord"
                android:text="@string/updateWord" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>